# homebridge-controller

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.json  log4rs.yaml
src/: configuration.rs  homebridge.rs  lib.rs  main.rs  programs.rs  suntimes.rs
src/programs/: control_evening_lights.rs  turn_morning_lights_off.rs
