[package]
name = "homebridge-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.16", features = ["derive"] }
log = { version = "0.4.22" }
env_logger = "0.11.5"
chrono = "0.4.38"
