[package]
name = "homebridge-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = { version = "0.4" }
chrono = "0.4"
thiserror = "1.0"
log4rs = { version = "1.3", features = ["all_components"] }
